--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>Level Up! Play and Progress in Life</title>
+    <link rel="stylesheet" type="text/css" href="css/launcher.css">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using node <script>document.write(process.versions.node)</script>,
-    Chrome <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <div class="mother-wrap">
+      <div class="title-wrap">
+      </div>
+      <div class="input-wrap">
+      </div>
+      <div class="footer-wrap">
+      </div>
+    </div>
   </body>
 </html>
