added some data

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <title>Level Up! Play and Progress in Life</title>
     <link rel="stylesheet" type="text/css" href="css/launcher.css">
+    <
+    <!-->
+      this link for the input box: http://codepen.io/bartekd/pen/LtaBl
+      http://codepen.io/tyrus/pen/eLlgs
+      http://codepen.io/andyNroses/pen/pbBWBL
+      Jquery integration
+      http://electron.atom.io/docs/faq/
+    </!-->
   </head>
   <body>
     <div class="mother-wrap">
       <div class="title-wrap">
+        <span class="launcher-title">Login</span>
       </div>
       <div class="input-wrap">
       </div>
