--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <title>Level Up! Play and Progress in Life</title>
     <link rel="stylesheet" type="text/css" href="css/launcher.css">
-    <
-    <!-->
+    <script type="text/javascript" src="js/player.js"></script>
+    <script type="text/javascript" src="js/test_player.js"></script>
+    <!--
       this link for the input box: http://codepen.io/bartekd/pen/LtaBl
       http://codepen.io/tyrus/pen/eLlgs
       http://codepen.io/andyNroses/pen/pbBWBL
       Jquery integration
       http://electron.atom.io/docs/faq/
-    </!-->
+    -->
   </head>
   <body>
     <div class="mother-wrap">
