changed index file

--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,33 @@
       http://codepen.io/andyNroses/pen/pbBWBL
       Jquery integration
       http://electron.atom.io/docs/faq/
+      http://codepen.io/MichaelArestad/pen/ohLIa?editors=1100
+      http://codepen.io/ariona/pen/geFIK
+      http://codepen.io/dghez/pen/ItxKE
     -->
   </head>
   <body>
     <div class="mother-wrap">
+      
       <div class="title-wrap">
         <span class="launcher-title">Login</span>
       </div>
+
       <div class="input-wrap">
+        <span>
+          <input class="balloon" id="state" type="text" placeholder="Liquid, solid, gaseous..." /><label for="state">State</label>
+        </span>
+        <span>
+          <input class="balloon" id="planet" type="text" placeholder="Probably Earth" /><label for="planet">Planet</label>
+        </span>
+        <span>
+          <input class="balloon" id="galaxy" type="text" placeholder="Milky Way?" /><label for="galaxy">Galaxy</label>
+        </span>
       </div>
+
       <div class="footer-wrap">
       </div>
+
     </div>
   </body>
 </html>
