completed initial test

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,10 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 
   <script type="text/javascript" src="js/player.js"></script>
-  <script type="text/javascript" src="js/test_player.js"></script>
+  <script type="text/javascript" src="js/skillset.js"></script>
+  <script type="text/javascript" src="js/task.js"></script>
+  <script type="text/javascript" src="js/profile.js"></script>
+  <script type="text/javascript" src="js/test_profile.js"></script>
 
   <script type="text/javascript" src="js/effect1.js"></script>
   <script type="text/javascript" src="js/button_effect.js"></script>
