added partial scss

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <script type="text/javascript" src="js/skillset.js"></script>
   <script type="text/javascript" src="js/task.js"></script>
   <script type="text/javascript" src="js/profile.js"></script>
-  <script type="text/javascript" src="js/test_profile.js"></script>
+  <script type="text/javascript" src="js/test/test_profile.js"></script>
 
   <script type="text/javascript" src="js/effect1.js"></script>
   <script type="text/javascript" src="js/button_effect.js"></script>
