added graph links

--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,9 @@
       http://codepen.io/MichaelArestad/pen/ohLIa?editors=1100
       http://codepen.io/ariona/pen/geFIK
       http://codepen.io/dghez/pen/ItxKE
+
+      //graph
+      http://codepen.io/Noahdecoco/pen/KnHuA
     -->
   </head>
   <body>
