--- a/src/windows/profile_page.html
+++ b/src/windows/profile_page.html
@@ -2,6 +2,12 @@
 <html>
 <head>
 	<title>Level Up!</title>
+	<!--
+		Design Inspiration:
+		http://www.hongkiat.com/blog/dashboard-design-examples-resources/
+		http://designrfix.com/design/dashboard-design
+		http://www.designyourway.net/blog/inspiration/showcase-of-beautiful-dashboard-ui-designs/
+	-->
 </head>
 <body>
 	<h1>Hola MoMo!</h1>
