adding dashboard links

--- a/src/windows/profile_page.html
+++ b/src/windows/profile_page.html
@@ -8,6 +8,14 @@
 		http://designrfix.com/design/dashboard-design
 		http://www.designyourway.net/blog/inspiration/showcase-of-beautiful-dashboard-ui-designs/
 	-->
+
+	<!--
+		Profile links:
+		http://codepen.io/HarrisCarney/pen/JGmqC 
+		http://codepen.io/Jackthomsonn/pen/mVRRMz
+		http://codepen.io/devtips/pen/mEjOLg
+		http://codepen.io/bigglesrocks/pen/XbGGEE
+	-->
 </head>
 <body>
 	<h1>Hola MoMo!</h1>
